# First

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
src/mini_swe_agent/: __init__.py  __main__.py  types.py
src/mini_swe_agent/batch/: runner.py
src/mini_swe_agent/cli/: help.py  main.py
src/mini_swe_agent/config/: defaults.yaml  loader.py  merger.py  schema.py  sources.py
src/mini_swe_agent/core/: limits.py  loop.py  submission.py
src/mini_swe_agent/executor/: base.py  docker.py  local.py  result.py
src/mini_swe_agent/inspector/: app.py  sanitize.py  screens.py
src/mini_swe_agent/models/: adapter_factory.py  anthropic_adapter.py  base.py  cost.py  messages.py  openai_adapter.py  text_adapter.py
src/mini_swe_agent/parser/: detector.py  errors.py  extractor.py
src/mini_swe_agent/trajectory/: reader.py  schema.py  writer.py
src/mini_swe_agent/utils/: logging.py  retry.py  templates.py
tests/: conftest.py
tests/acceptance/: conftest.py  test_batch_preds_schema.py  test_parser_rules.py  test_submission_contract.py  test_template_truncation.py  test_trajectory_roundtrip.py
tests/unit/: test_adapter_factory.py  test_agent_loop.py  test_batch_runner.py  test_cli_main.py  test_config_merger.py  test_config_sources.py  test_cost_tracker.py  test_limits.py  test_local_executor.py  test_model_adapters.py  test_retry.py  test_submission.py
