[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-swe-agent"
version = "0.1.0"
description = "Mini SWE Agent: CLI tool for closed-loop model-driven shell execution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mini SWE Agent Contributors"}
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "tenacity>=8.0",
    "textual>=0.40.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0",
]

[project.scripts]
mswea = "mini_swe_agent.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
